Fixed NeoForge init